# text-editor

./: .gitignore  CMakeLists.txt  main.c
assets/: test.txt
